# validex

./: .flake8  .gitignore  .pre-commit-config.yaml  Readme.md  example.py  pyproject.toml  test_example.py
.github/_wf/: lint.yml
.github/workflows/: release.yml  security.yml  test.yml
morph/: __init__.py  base.py  training.py
tests/: test_flow.py  test_lib.py  test_loaders.py
validex/: base.py  loaders.py  logger.py  training.py  utils.py
