[tool.poetry]
name = "validex"
version = "0.0.1"
description = "A Python package to extract data from unstructured into structured format"
authors = ["Alexander Miasoiedov <msoedov@gmail.com>"]
maintainers = ["Alexander Miasoiedov <msoedov@gmail.com>"]
repository = "https://github.com/msoedov/validex"
license = "MIT"
readme = "Readme.md"
keywords = [
    "nlp",
    "extraction",
    "openai",
    "structured output parsing",
    "fastapi",
    "llm",
]
packages = [{ include = "validex", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
magentic = "^0.26.0"
stamina = "^24.2.0"
justext = "*"
cache_to_disk = "*"
rich = "*"
requests = "*"
feedparser = "*"
pypdf = "*"
pytest-asyncio = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
httpx = "^0.24.1"
pytest = ">=7.4.1,<9.0.0"
types-requests = "^2.31.0.1"
pre-commit = "^3.4.0"
responses = ">=0.14,<0.26"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
