[tool.poetry]
name = "validex"
version = "0.0.3"
description = "A Python package to extract data from unstructured into structured format"
authors = ["Alexander Miasoiedov <msoedov@gmail.com>"]
maintainers = ["Alexander Miasoiedov <msoedov@gmail.com>"]
repository = "https://github.com/msoedov/validex"
license = "MIT"
readme = "Readme.md"
keywords = [
    "nlp",
    "extraction",
    "openai",
    "structured output parsing",
    "fastapi",
    "llm",
]
packages = [{ include = "validex", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
magentic = "^0.34.1"
stamina = "^24.3.0"
justext = "*"
cache_to_disk = "*"
rich = "^13.9.4"
requests = "*"
feedparser = "*"
pypdf = "^5.1.0"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
httpx = "^0.28.1"
pytest = "^8.3.4"
types-requests = "^2.32.0.20241016"
pre-commit = "^4.0.1"
responses = "^0.25.3"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
